--- a/scss/_swish.scss
+++ b/scss/_swish.scss
@@ -2,11 +2,12 @@
 @import 'mixins';
 @import 'typography';
 @import 'projects';
-
+@import 'layout';
 
 section.swish-grid{
+  //border: 1px solid blue;
   display:grid;
-  margin: 10em 0 4em 0;
+  margin: 7em 0 4em 0;
   max-width: 1400px;
   grid-row-gap: 40px;
   grid-template-columns:1fr 1fr 1fr;
@@ -35,7 +36,7 @@ section.swish-grid{
 
 
   @include for-hd-desktop{
-    margin: 10em 2.5em 4em 2.5em;
+    margin: 7em 1em 4em 1em;
   }
 
 
