--- a/scss/_colours.scss
+++ b/scss/_colours.scss
@@ -11,9 +11,8 @@ $place-holder: #EBEBEB;
 //----Project Colours---//
 
 $milya:#422FFA;
-$swish:#FFBB41;
-$creditsuisse:#172F5B;
-$posters:#262626;
+$swish:#383838;
+$posters:#F0F0F0;
 
 
 //---Illustration Colours---//
