--- a/scss/master.scss
+++ b/scss/master.scss
@@ -3,8 +3,7 @@
 @import "colours";
 @import "mixins";
 @import "projects";
-@import "footer";
-@import "navigation";
+@import "illustrations";
 @import "swish";
 
 
