--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -8,6 +8,56 @@ body > header {
   margin-top: 4.7em;
 }
 
+
+nav{
+  z-index: 1;
+  float:left;
+  top:0;
+  position: fixed;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding:1em 0.5em 1em 0.5em;
+  background-color: $background-grey;
+  transition: background-color 0.4s ease-out;
+
+  aside.menu{
+    margin-right:1.5em;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  aside.nav-left{
+    margin-left: 1em;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+  img.logo-img{
+      width: 50%;
+      height: 50%;
+    }
+img.logo-img:hover{
+  width: 55%;
+  height: 55%;
+  transition-duration: 0.2s;
+}
+
+    a{
+      margin: 0 0 0 0;
+      padding: 0 0 0 0;
+    }
+  }
+}
+
+nav.scroll {
+  background-color: $background-grey;
+  color: #eef;
+}
+
+
 content{
   //border: 1px solid red;
   width: 1440px;
@@ -43,4 +93,34 @@ ul.projects{
   flex-direction: column;
   overflow: hidden;
   min-height: 532px;
+}
+
+article.footer{
+  min-width: 100%;
+  margin-bottom: 5em;
+  display: flex;
+  flex-direction:row;
+  @include for-phone-only{
+    flex-direction: column;
+  }
+  border-top: 1px solid $default-text;
+    aside.footer-link{
+      margin-left: 0.8em;
+      max-width: 333px;
+     margin-right: 35px;
+    }
+
+}
+
+.scroll-to-top-link{
+  display: none;
+  cursor: pointer;
+  display: block;
+  position:fixed;
+  bottom:25px;
+  right: 25px;
+  z-index: 1;
+  width: 23px;
+  height: 92px;
+
 }
