adds swish page

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -60,7 +60,7 @@ nav.scroll {
 
 content{
   //border: 1px solid red;
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   padding: 0;
   margin: 4em .5em 1em .5em;
