--- a/css/master.css
+++ b/css/master.css
@@ -71,6 +71,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -83,8 +91,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -143,7 +151,7 @@ nav.scroll {
   color: #eef; }
 
 content {
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   padding: 0;
   margin: 4em .5em 1em .5em;
@@ -252,6 +260,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -264,8 +280,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -335,6 +351,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -347,8 +371,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -418,6 +442,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -430,8 +462,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -490,7 +522,7 @@ nav.scroll {
   color: #eef; }
 
 content {
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   padding: 0;
   margin: 4em .5em 1em .5em;
@@ -696,6 +728,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -708,8 +748,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -779,6 +819,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -791,8 +839,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -851,7 +899,7 @@ nav.scroll {
   color: #eef; }
 
 content {
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   padding: 0;
   margin: 4em .5em 1em .5em;
@@ -1101,6 +1149,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -1113,8 +1169,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -1184,6 +1240,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -1196,8 +1260,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -1267,6 +1331,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -1279,8 +1351,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -1339,7 +1411,7 @@ nav.scroll {
   color: #eef; }
 
 content {
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   padding: 0;
   margin: 4em .5em 1em .5em;
@@ -1545,6 +1617,14 @@ blockquote.attention {
     blockquote.attention {
       font-size: 1.2em; } }
 
+h4 {
+  margin: 0;
+  font-size: 120px;
+  font-weight: bolder;
+  color: #F7F7F7;
+  -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #3E3535; }
+
 h1 {
   font-weight: 400;
   font-size: 2.5em;
@@ -1557,8 +1637,8 @@ h1 {
 
 h2 {
   margin: 0;
-  font-size: 22px;
-  font-weight: bolder; }
+  font-size: 32px;
+  font-weight: lighter; }
 
 h3 {
   margin: 0;
@@ -1617,7 +1697,7 @@ nav.scroll {
   color: #eef; }
 
 content {
-  width: 1440px;
+  width: 100%;
   max-width: 1440px;
   padding: 0;
   margin: 4em .5em 1em .5em;
@@ -1673,65 +1753,105 @@ article.footer {
   width: 23px;
   height: 92px; }
 
-section.swish-grid {
+section.swish-splashbox {
+  margin: 7em 0 1em 0;
+  width: 100%;
+  align-self: baseline;
   display: grid;
-  margin: 7em 0 4em 0;
-  max-width: 1400px;
-  grid-row-gap: 40px;
-  grid-template-columns: 1fr 1fr 1fr;
-  justify-items: stretch;
-  grid-template-rows: 120px 800px 440px 700px;
-  grid-template-areas: "swish_header swish_header swish_header" "swish_splash swish_splash swish_splash" ". swish_quote swish_quote" "swish_screen1 swish_wishlist swish_delivery"; }
-  @media (max-width: 599px) {
-    section.swish-grid {
-      margin: 2em 0 4em 0;
-      grid-gap: 40px;
-      grid-template-columns: 1fr;
-      grid-template-rows: 300px 400px 300px 500px 500px 500px;
-      grid-template-areas: "swish_header " "swish_splash" "swish_quote" "swish_screen1" "swish_wishlist" "swish_delivery"; } }
-  @media (max-width: 1400px) {
-    section.swish-grid {
-      margin: 7em 1em 4em 1em; } }
-  section.swish-grid .swish-header {
-    grid-area: swish_header;
-    display: grid;
-    grid-template-columns: 2fr 1fr 1fr;
-    grid-gap: 50px; }
-    @media (max-width: 599px) {
-      section.swish-grid .swish-header {
-        grid-template-columns: 1fr;
-        grid-gap: 40px;
-        grid-template-rows: 70px 70px 70px; } }
-  section.swish-grid .swish-splash {
-    grid-area: swish_splash;
-    background-image: url(../img/swish/swish-splash.jpg);
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat; }
-  section.swish-grid article.swish-quote {
-    grid-area: swish_quote;
-    align-self: center; }
-  section.swish-grid .swish-screen1 {
-    grid-area: swish_screen1;
-    background-image: url(../img/swish/swish-screen1.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #F7F7F7; }
-  section.swish-grid .swish-wishlist {
-    grid-area: swish_wishlist;
-    background-image: url(../img/swish/swish-wishlist.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #F7F7F7; }
-  section.swish-grid .swish-delivery {
-    grid-area: swish_delivery;
-    background-image: url(../img/swish/swish-delivery.png);
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-color: #F7F7F7; }
+  grid-template-columns: 3fr 1fr 1fr;
+  grid-template-rows: 175px 800px; }
+  section.swish-splashbox .swish-title-splash {
+    grid-column-start: 1;
+    grid-column-end: 5; }
+
+section.swish-introduction {
+  margin: 3em 0 1em 0;
+  display: grid;
+  height: 1000px;
+  width: 100%;
+  grid-template-rows: 1fr 2fr;
+  grid-template-columns: 3fr 4fr; }
+  section.swish-introduction .swish-overview-title {
+    border-top: 2px solid #3E3535; }
+  section.swish-introduction .swish-inspiration-title {
+    border-top: 2px solid #3E3535; }
+  section.swish-introduction .swish-overview-para {
+    border-top: 2px solid #3E3535; }
+  section.swish-introduction .swish-inspiration-para {
+    border-top: 2px solid #3E3535; }
+
+section.swish-process {
+  border-top: 2px solid #3E3535;
+  margin: 1em 0 1em 0;
+  display: grid;
+  width: 100%;
+  height: 1500px;
+  grid-column-gap: 25px;
+  grid-row-gap: 50px;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 125px repeat(3, 1fr); }
+  section.swish-process .process-title {
+    grid-column-start: 1;
+    grid-column-end: 4; }
+  section.swish-process .swish-process-box {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap; }
+    section.swish-process .swish-process-box aside.swish-process1 {
+      margin-bottom: 1em;
+      width: 100%;
+      height: 400px;
+      background-color: #0011FF; }
+    section.swish-process .swish-process-box aside.swish-process2 {
+      width: 100%;
+      height: 400px;
+      background-color: #0011FF; }
+    section.swish-process .swish-process-box aside.swish-process3 {
+      width: 100%;
+      height: 400px;
+      background-color: #0011FF; }
+    section.swish-process .swish-process-box aside.swish-process4 {
+      width: 100%;
+      height: 400px;
+      background-color: #0011FF; }
+    section.swish-process .swish-process-box aside.swish-process5 {
+      width: 100%;
+      height: 400px;
+      background-color: #0011FF; }
+    section.swish-process .swish-process-box aside.swish-process6 {
+      width: 100%;
+      height: 400px;
+      background-color: #0011FF; }
+
+.swish-splash {
+  background-image: url(../img/swish/swish-splash.jpg);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat; }
+
+.swish-screen1 {
+  grid-area: swish_screen1;
+  background-image: url(../img/swish/swish-screen1.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #F7F7F7; }
+
+.swish-wishlist {
+  grid-area: swish_wishlist;
+  background-image: url(../img/swish/swish-wishlist.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #F7F7F7; }
+
+.swish-delivery {
+  grid-area: swish_delivery;
+  background-image: url(../img/swish/swish-delivery.png);
+  background-size: contain;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: #F7F7F7; }
 
 html {
   background-color: #F7F7F7;
