--- a/css/master.css
+++ b/css/master.css
@@ -1772,20 +1772,25 @@ section.swish-introduction {
   grid-template-rows: 1fr 2fr;
   grid-template-columns: 3fr 4fr; }
   section.swish-introduction .swish-overview-title {
+    padding-top: 1em;
     border-top: 2px solid #3E3535; }
   section.swish-introduction .swish-inspiration-title {
+    padding-top: 1em;
     border-top: 2px solid #3E3535; }
   section.swish-introduction .swish-overview-para {
+    padding-top: 1em;
     border-top: 2px solid #3E3535; }
   section.swish-introduction .swish-inspiration-para {
+    padding-top: 1em;
     border-top: 2px solid #3E3535; }
 
 section.swish-process {
+  padding-top: 1em;
   border-top: 2px solid #3E3535;
   margin: 1em 0 1em 0;
   display: grid;
   width: 100%;
-  height: 1500px;
+  height: 1400px;
   grid-column-gap: 25px;
   grid-row-gap: 50px;
   grid-template-columns: repeat(3, 1fr);
@@ -1802,26 +1807,37 @@ section.swish-process {
       width: 100%;
       height: 400px;
       background-color: #0011FF; }
-    section.swish-process .swish-process-box aside.swish-process2 {
-      width: 100%;
-      height: 400px;
-      background-color: #0011FF; }
-    section.swish-process .swish-process-box aside.swish-process3 {
-      width: 100%;
-      height: 400px;
-      background-color: #0011FF; }
-    section.swish-process .swish-process-box aside.swish-process4 {
-      width: 100%;
-      height: 400px;
-      background-color: #0011FF; }
-    section.swish-process .swish-process-box aside.swish-process5 {
-      width: 100%;
-      height: 400px;
-      background-color: #0011FF; }
-    section.swish-process .swish-process-box aside.swish-process6 {
-      width: 100%;
-      height: 400px;
-      background-color: #0011FF; }
+
+section.swish-personas {
+  padding-top: 1em;
+  border-top: 2px solid #3E3535;
+  margin: 1em 0 1em 0;
+  display: grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 700px;
+  grid-column-gap: 25px; }
+  section.swish-personas aside.swish-persona-box {
+    margin-bottom: 1em;
+    width: 100%;
+    height: 400px;
+    background-color: #0011FF; }
+
+section.swish-userflows {
+  padding-top: 1em;
+  border-top: 2px solid #3E3535;
+  margin: 1em 0 1em 0;
+  display: grid;
+  width: 100%;
+  height: 1200px;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap: 25px; }
+  section.swish-userflows .swish-userflow-box {
+    grid-column-start: 2;
+    grid-column-end: 4;
+    height: 475px;
+    background-color: #0011FF; }
 
 .swish-splash {
   background-image: url(../img/swish/swish-splash.jpg);
