--- a/scss/_swish.scss
+++ b/scss/_swish.scss
@@ -36,28 +36,33 @@ width: 100%;
 grid-template-rows: 1fr 2fr;
 grid-template-columns: 3fr 4fr;
   .swish-overview-title{
+    padding-top: 1em;
     border-top: 2px solid $default-text;
     //background-color: $link-active;
   }
   .swish-inspiration-title{
+    padding-top: 1em;
     border-top: 2px solid $default-text;
     //background-color: $link-hover;
   }
   .swish-overview-para{
+    padding-top: 1em;
     border-top: 2px solid $default-text;
     //background-color: $illustration-salmon;
   }
   .swish-inspiration-para{
+    padding-top: 1em;
     border-top: 2px solid $default-text;
     //background-color: $illustration-purple;
   }
 }
 section.swish-process{
+padding-top: 1em;
 border-top: 2px solid $default-text;
 margin: 1em 0 1em 0;
 display:grid;
 width: 100%;
-height: 1500px;
+height: 1400px;
 grid-column-gap:25px;
 grid-row-gap:50px;
 grid-template-columns:repeat(3, 1fr);
@@ -80,32 +85,43 @@ grid-template-rows: 125px repeat(3, 1fr);
       height: 400px;
       background-color: $link-active;
     }
-    aside.swish-process2{
-      width: 100%;
-      height: 400px;
-      background-color: $link-active;
-    }
-    aside.swish-process3{
-      width: 100%;
-      height: 400px;
-      background-color: $link-active;
-    }
-    aside.swish-process4{
-      width: 100%;
-      height: 400px;
-      background-color: $link-active;
-    }
-    aside.swish-process5{
-      width: 100%;
-      height: 400px;
-      background-color: $link-active;
-    }
-    aside.swish-process6{
-      width: 100%;
-      height: 400px;
-      background-color: $link-active;
-    }
   }
+}
+
+section.swish-personas{
+  padding-top: 1em;
+  border-top: 2px solid $default-text;
+  margin: 1em 0 1em 0;
+  display:grid;
+  width: 100%;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 700px;
+  grid-column-gap: 25px;
+  aside.swish-persona-box{
+    margin-bottom: 1em;
+    width: 100%;
+    height: 400px;
+    background-color: $link-active;
+  }
+}
+
+section.swish-userflows{
+  padding-top: 1em;
+  border-top: 2px solid $default-text;
+  margin: 1em 0 1em 0;
+  display:grid;
+  width: 100%;
+  height:1200px;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: repeat(4, 1fr);
+  grid-gap:25px;
+  .swish-userflow-box{
+    grid-column-start: 2;
+    grid-column-end: 4;
+    height:475px;
+    background-color: $link-active;
+  }
+
 }
 
 
