--- a/scss/_swish.scss
+++ b/scss/_swish.scss
@@ -113,15 +113,33 @@ section.swish-userflows{
   width: 100%;
   height:1200px;
   grid-template-columns: 1fr 2fr;
-  grid-template-rows: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   grid-gap:25px;
   .swish-userflow-box{
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 3;
     height:475px;
     background-color: $link-active;
   }
+}
 
+section.swish-sketches{
+  padding-top: 1em;
+  border-top: 2px solid $default-text;
+  margin: 1em 0 1em 0;
+  display:grid;
+  width: 100%;
+  height: 1200px;
+  grid-template-columns: repeat(3,1fr);
+  grid-template-rows: repeat(3,1fr);
+  grid-gap:25px;
+  .swish-sketch-title{
+    grid-row-start:1;
+    grid-row-end:3;
+  }
+  .swish-sketch-box{
+   background-color: $link-active;
+  }
 }
 
 
